--- a/css/base.css
+++ b/css/base.css
@@ -9,7 +9,7 @@
 body {
   font-size: 14px;
   font-family: 'Microsoft YaHei', sans-serif;
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 a {
   color: #333;
