--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ th {
 body {
   font-size: 14px;
   font-family: 'Microsoft YaHei', sans-serif;
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 a {
   color: #333;
@@ -283,15 +283,186 @@ body {
   width: 100%;
   height: 100%;
 }
-.banner {
+.mmm-container {
   width: 100%;
-  height: 100%;
-  background-color: pink;
   min-width: 320px;
-  max-width: 640px;
+  max-width: 750px;
+  background-color: #fff;
   margin: 0 auto;
-  overflow: hidden;
+}
+.mmm-header {
+  width: 100%;
+  min-width: 320px;
+  max-width: 750px;
+  height: 1rem;
+  background-color: #ff841d;
+}
+.mmm-header .header-left {
+  width: 75%;
+  padding: .25rem .3rem;
+}
+.mmm-header .header-left img {
+  max-height: .5rem;
+  max-width: 3.71rem;
+}
+.mmm-header .header-right {
+  width: 25%;
+  padding: .14rem;
+}
+.mmm-header .header-right img {
+  max-heiht: .68rem;
+  max-width: .68rem;
+}
+.mmm-search {
+  padding: .2rem 1.6rem .2rem .2rem;
   position: relative;
-  padding-top: 45px;
-  padding-bottom: 55px;
+  border-bottom: 20px solid #f1f1f1;
+}
+.mmm-search input {
+  margin: 0;
+  height: .6rem;
+  border-radius: .6rem;
+  font-size: .24rem;
+}
+.mmm-search input:first-child {
+  padding-right: .2rem;
+  background-color: #f1f1f1;
+}
+.mmm-search .search {
+  width: 1.2rem;
+  height: .6rem;
+  text-align: center;
+  background-color: #ff841d;
+  color: #fff;
+  font-size: .35rem;
+  position: absolute;
+  right: .2rem;
+  top: .2rem;
+}
+.mmm-nav {
+  border-bottom: 10px solid #f1f1f1;
+}
+.mmm-nav li {
+  width: 25%;
+  float: left;
+  margin-top: .3rem;
+}
+.mmm-nav li img {
+  width: 1rem;
+  height: 1rem;
+  margin: 0 auto;
+}
+.mmm-nav li p {
+  text-align: center;
+  line-height: 2;
+  font-size: .2rem;
+}
+.mmm-recommend .title {
+  height: .7rem;
+  line-height: .7rem;
+  padding: 0 .2rem;
+  background-color: #ff841d;
+}
+.mmm-recommend .title span {
+  font-size: .28rem;
+  color: #fff;
+}
+.mmm-recommend .title a {
+  padding-top: .15rem;
+}
+.mmm-recommend .title a img {
+  width: .4rem;
+  height: .4rem;
+}
+.mmm-recommend .content li {
+  border-bottom: 1px solid #ccc;
+  padding: .28rem .16rem .28rem 2.16rem;
+  height: 2.56rem;
+  position: relative;
+}
+.mmm-recommend .content li .left {
+  position: absolute;
+  top: .28rem;
+  left: .16rem;
+}
+.mmm-recommend .content li .left img {
+  width: 2rem;
+  height: 2rem;
+}
+.mmm-recommend .content li .right {
+  width: 100%;
+  padding: .2rem;
+}
+.mmm-recommend .content li .right p {
+  color: #333;
+  height: 1.3rem;
+  margin: 0;
+}
+.mmm-recommend .content li .right p span {
+  color: #ff6c00;
+}
+.mmm-recommend .content li .right .other {
+  color: #a1a1a1;
+}
+.mmm-more {
+  padding: .2rem .2rem 0 .2rem;
+  border-bottom: .2rem solid #f1f1f1;
+}
+.mmm-more .content {
+  border: 1px solid #ccc;
+  border-radius: .05rem;
+  text-align: center;
+  height: .6rem;
+  line-height: .6rem;
+}
+.mmm-rank .title {
+  height: .7rem;
+  line-height: .7rem;
+  padding: 0 .2rem;
+  background-color: #ff841d;
+}
+.mmm-rank .title span {
+  font-size: .28rem;
+  color: #fff;
+}
+.mmm-rank .title a {
+  padding-top: .15rem;
+}
+.mmm-rank .title a img {
+  width: .4rem;
+  height: .4rem;
+}
+.mmm-footer {
+  padding-top: .5rem;
+  background-color: #f1f1f1;
+}
+.mmm-footer a {
+  font-size: .24rem;
+}
+.mmm-footer ul {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+.mmm-footer ul li {
+  width: 33.33%;
+  float: left;
+  height: .6rem;
+  line-height: .6rem;
+  text-align: center;
+  border-right: 1px solid #ccc;
+}
+.mmm-footer ul li img {
+  display: inline-block;
+  width: .15rem;
+  height: .15rem;
+}
+.mmm-footer ul li:last-child {
+  border-right: none;
+}
+.mmm-footer .bottom {
+  padding: .35rem 0;
+  text-align: center;
+}
+.mmm-footer .bottom p {
+  font-size: .24rem;
 }
