--- a/less/index.less
+++ b/less/index.less
@@ -3,21 +3,227 @@
 @import "base";
 //引入屏幕适配
 @import "adaptor";
+@import "varible";
 
 html, body {
   width: 100%;
   height: 100%;
 }
 
-.banner {
+.mmm-container {
   width: 100%;
-  height: 100%;
-  background-color: pink;
+  //height: 100%;
   min-width: 320px;
-  max-width: 640px;
+  max-width: 750px;
+  background-color: #fff;
   margin: 0 auto;
-  overflow: hidden;
-  position: relative;
-  padding-top: 45px;
-  padding-bottom: 55px;
 }
+
+//-------------------------头部区域
+.mmm-header {
+  width: 100%;
+  min-width: 320px;
+  max-width: 750px;
+  height: 1rem;
+  background-color: @mmmColor;
+
+  .header-left {
+    width: 75%;
+    padding: .25rem .3rem;
+    img {
+      max-height: .5rem;
+      max-width: 3.71rem;
+    }
+  }
+  .header-right {
+    width: 25%;
+    padding: .14rem;
+    img {
+      max-heiht: .68rem;
+      max-width: .68rem;
+    }
+  }
+}
+
+//--------------------------搜索区域
+.mmm-search {
+  padding: .2rem 1.6rem .2rem .2rem;
+  position: relative;
+  border-bottom: 20px solid #f1f1f1;
+  input {
+    margin: 0;
+    height: .6rem;
+    border-radius: .6rem;
+    font-size: .24rem;
+  }
+  input:first-child {
+    padding-right: .2rem;
+    background-color: #f1f1f1;
+  }
+  .search {
+    width: 1.2rem;
+    height: .6rem;
+    text-align: center;
+    background-color: @mmmColor;
+    color: #fff;
+    font-size: .35rem;
+    position: absolute;
+    right: .2rem;
+    top: .2rem;
+  }
+}
+
+//----------------------------导航区域
+.mmm-nav {
+  border-bottom: 10px solid #f1f1f1;
+  li {
+    width: 25%;
+    float: left;
+    margin-top: .3rem;
+    img {
+      width: 1rem;
+      height: 1rem;
+      margin: 0 auto;
+    }
+    p {
+      text-align: center;
+      line-height: 2;
+      font-size: .2rem;
+    }
+  }
+
+}
+
+//----------------------------折扣推荐
+.mmm-recommend {
+  .title {
+    height: .7rem;
+    line-height: .7rem;
+    padding: 0 .2rem;
+    background-color: @mmmColor;
+    span {
+      font-size: .28rem;
+      color: #fff;
+    }
+    a {
+      padding-top: .15rem;
+      img {
+        width: .4rem;
+        height: .4rem;
+      }
+    }
+  }
+  .content {
+    li {
+      border-bottom: 1px solid #ccc;
+      padding: .28rem .16rem .28rem 2.16rem;
+      height: 2.56rem;
+      position: relative;
+      .left {
+        position: absolute;
+        top: .28rem;
+        left: .16rem;
+        img {
+          width: 2rem;
+          height: 2rem;
+        }
+      }
+      .right {
+        width: 100%;
+        padding: .2rem;
+        p {
+          color: #333;
+          height: 1.3rem;
+          margin:0;
+          span {
+            color: #ff6c00;
+          }
+        }
+        .other {
+          color:#a1a1a1;
+        }
+      }
+    }
+  }
+
+}
+
+//-----------------------------更多
+.mmm-more{
+  //height: 1rem;
+  padding: .2rem .2rem 0 .2rem;
+  border-bottom:.2rem solid #f1f1f1;
+  .content {
+    border: 1px solid #ccc;
+    border-radius:.05rem;
+    text-align: center;
+    height: .6rem;
+    line-height:.6rem;
+  }
+}
+
+//-------------------------------品牌排行
+.mmm-rank {
+  .title {
+    height: .7rem;
+    line-height: .7rem;
+    padding: 0 .2rem;
+    background-color: @mmmColor;
+    span {
+      font-size: .28rem;
+      color: #fff;
+    }
+    a {
+      padding-top: .15rem;
+      img {
+        width: .4rem;
+        height: .4rem;
+      }
+    }
+  }
+}
+
+//---------------------底部区域
+.mmm-footer {
+  padding-top:.5rem;
+  background-color: #f1f1f1;
+  a {
+    font-size:.24rem;
+  }
+  ul {
+    border-top:1px solid #ccc;
+    border-bottom:1px solid #ccc;
+    li{
+      width: 33.33%;
+      float: left;
+      height: .6rem;
+      line-height:.6rem;
+      text-align: center;
+      border-right:1px solid #ccc;
+      img {
+        display: inline-block;
+        width: .15rem;
+        height: .15rem;
+      }
+    }
+    li:last-child{
+      border-right:none;
+    }
+  }
+  .bottom {
+    padding:.35rem 0;
+    text-align: center;
+    p {
+      font-size:.24rem;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
