--- a/css/bijia.css
+++ b/css/bijia.css
@@ -223,6 +223,23 @@ img {
   display: block;
   width: 100%;
 }
+/*单行溢出*/
+.one-txt-cut {
+  overflow: hidden;
+  /*强制不换行*/
+  white-space: nowrap;
+  /*溢出文本以省略号显示*/
+  text-overflow: ellipsis;
+}
+/*多行溢出*/
+.txt-cut {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  /*设置2行溢出*/
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
 @media screen and (min-width: 320px) {
   html {
     font-size: 42.66666667px;
@@ -399,4 +416,120 @@ body {
 .mmm-main .title a {
   font-size: .24rem;
   color: #333;
+}
+.mmm-main .product {
+  position: relative;
+  padding-bottom: .2rem;
+}
+.mmm-main .product .product-name {
+  font-size: .34rem;
+  text-align: center;
+  padding: .4rem;
+  padding-bottom: 0;
+  line-height: .6rem;
+}
+.mmm-main .product .product-img {
+  width: 4rem;
+  height: 4rem;
+  margin: 0 auto;
+}
+.mmm-main .product .product-collect {
+  width: .8rem;
+  height: .8rem;
+  position: absolute;
+  right: .4rem;
+  bottom: .3rem;
+}
+.mmm-main .tab ul {
+  border-top: .04rem solid #c94900;
+  border-bottom: .04rem solid #c94900;
+}
+.mmm-main .tab ul li a {
+  width: 33.33%;
+  height: .6rem;
+  line-height: .6rem;
+  float: left;
+  text-align: center;
+  background-color: #ffc117;
+  color: #fff;
+  border-right: .04rem solid #c94900;
+}
+.mmm-main .tab ul li:first-child a {
+  background-color: #ff9c1b;
+}
+.mmm-main .tab ul li:last-child a {
+  border-right: none;
+}
+.mmm-main .plist {
+  line-height: .9rem;
+  border-bottom: 1px solid #ccc;
+}
+.mmm-main .plist a {
+  height: .9rem;
+  line-height: .9rem;
+  padding: 0 .05rem;
+  text-align: center;
+  float: left;
+  font-size: .3rem;
+}
+.mmm-main .plist a img {
+  display: inline-block;
+  height: .3rem;
+  width: .3rem;
+  vertical-align: middle;
+}
+.mmm-main .plist input {
+  width: 1.1rem;
+  height: .5rem;
+  text-align: center;
+  border-radius: .06rem;
+  background-color: #ff5500;
+  color: #fff;
+  margin: .24rem .06rem .16rem .35rem;
+}
+.mmm-main .plist span {
+  color: #c72b71;
+  font-size: .26rem;
+}
+.mmm-main .note {
+  border-bottom: .06rem solid #747474;
+}
+.mmm-main .note p {
+  height: 1.16rem;
+  line-height: .4rem;
+  font-size: .22rem;
+  padding: .2rem .6rem;
+}
+.mmm-main .appr {
+  height: .66rem;
+  line-height: .66rem;
+  text-align: center;
+  font-size: .26rem;
+  color: #333;
+  background-color: #dbdbdb;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  margin-top: .06rem;
+}
+.mmm-main .product-com-list li {
+  padding: .3rem .2rem;
+  border-bottom: .03rem solid #ccc;
+}
+.mmm-main .product-com-list li .star {
+  padding-bottom: .3rem;
+  color: #666;
+}
+.mmm-main .product-com-list li .com-content {
+  color: #333;
+}
+.mmm-main .product-com-list .more a {
+  display: block;
+  height: .64rem;
+  line-height: .64rem;
+  margin: .32rem .16rem .5rem;
+  border-radius: .06rem;
+  text-align: center;
+  font-size: .26rem;
+  color: #333;
+  background-image: linear-gradient(to top, #c5c5c5, #f3f3f3);
 }
