--- a/less/base.less
+++ b/less/base.less
@@ -46,3 +46,21 @@ img {
   display: block;
   width: 100%;
 }
+/*单行溢出*/
+.one-txt-cut {
+  overflow: hidden;
+  /*强制不换行*/
+  white-space: nowrap;
+  /*溢出文本以省略号显示*/
+  text-overflow: ellipsis;
+}
+
+/*多行溢出*/
+.txt-cut {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  /*设置2行溢出*/
+   -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
