--- a/less/bijia.less
+++ b/less/bijia.less
@@ -9,27 +9,159 @@
     height: .75rem;
     line-height: .75rem;
     border-bottom: 1px solid #ccc;
-    background-image: linear-gradient(to top ,#eaeaea ,#fff);
+    background-image: linear-gradient(to top, #eaeaea, #fff);
     padding: 0 .17rem;
-    position:relative;
+    position: relative;
     input {
       width: 1.2rem;
       height: .5rem;
       text-align: center;
       background-color: #eaeaea;
       font-size: .24rem;
-      color:#333;
+      color: #333;
       border: 1px solid #ccc;
-      position:absolute;
-      right:.17rem;
-      top:.12rem;
+      position: absolute;
+      right: .17rem;
+      top: .12rem;
     }
     a {
-      font-size:.24rem;
-      color:#333;
+      font-size: .24rem;
+      color: #333;
     }
   }
-  .content {
-
+  .product {
+    position: relative;
+    padding-bottom: .2rem;
+    .product-name {
+      font-size: .34rem;
+      text-align: center;
+      padding: .4rem;
+      padding-bottom: 0;
+      line-height: .6rem;
+    }
+    .product-img {
+      width: 4rem;
+      height: 4rem;
+      margin: 0 auto;
+    }
+    .product-collect {
+      width: .8rem;
+      height: .8rem;
+      position: absolute;
+      right: .4rem;
+      bottom: .3rem;
+    }
   }
+
+  .tab {
+    ul {
+      border-top: .04rem solid #c94900;
+      border-bottom: .04rem solid #c94900;
+      li {
+        a {
+          width: 33.33%;
+          height: .6rem;
+          line-height: .6rem;
+          float: left;
+          text-align: center;
+          background-color: #ffc117;
+          color: #fff;
+          border-right: .04rem solid #c94900;
+        }
+      }
+      li:first-child {
+        a {
+          background-color: #ff9c1b;
+        }
+      }
+      li:last-child {
+        a {
+          border-right: none;
+        }
+      }
+    }
+  }
+
+  .plist {
+    line-height: .9rem;
+    border-bottom: 1px solid #ccc;
+    a {
+      height: .9rem;
+      line-height: .9rem;
+      padding: 0 .05rem;
+      text-align: center;
+      float: left;
+      font-size: .3rem;
+      img {
+        display: inline-block;
+        height: .3rem;
+        width: .3rem;
+        vertical-align: middle;
+      }
+    }
+    input {
+      width: 1.1rem;
+      height: .5rem;
+      text-align: center;
+      border-radius: .06rem;
+      background-color: #ff5500;
+      color: #fff;
+      margin: .24rem .06rem .16rem .35rem;
+    }
+    span {
+      color: #c72b71;
+      font-size: .26rem;
+    }
+  }
+
+  .note {
+    border-bottom: .06rem solid #747474;
+    p {
+      height: 1.16rem;
+      line-height: .4rem;
+      font-size: .22rem;
+      padding: .2rem .6rem;
+    }
+  }
+
+  .appr {
+    height: .66rem;
+    line-height: .66rem;
+    text-align: center;
+    font-size: .26rem;
+    color: #333;
+    background-color: #dbdbdb;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    margin-top: .06rem;
+  }
+
+  .product-com-list {
+    li {
+      padding: .3rem .2rem;
+      border-bottom: .03rem solid #ccc;
+      .star {
+        padding-bottom: .3rem;
+        color: #666;
+      }
+      .com-content {
+        color: #333;
+      }
+    }
+
+    .more {
+      a {
+        display: block;
+        height: .64rem;
+        line-height:.64rem;
+        margin: .32rem .16rem .5rem;
+        border-radius: .06rem;
+        text-align: center;
+        font-size: .26rem;
+        color:#333;
+        background-image: linear-gradient(to top,#c5c5c5,#f3f3f3);
+      }
+    }
+  }
+
 }
