--- a/css/productList.css
+++ b/css/productList.css
@@ -240,6 +240,12 @@ img {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+em,
+i,
+u,
+b {
+  font-style: normal;
+}
 @media screen and (min-width: 320px) {
   html {
     font-size: 42.66666667px;
